Fixed spacing on columns on homepage Added more pages

--- a/public/output.css
+++ b/public/output.css
@@ -560,6 +560,14 @@ video {
   display: none;
 }
 
+.visible{
+  visibility: visible;
+}
+
+.collapse{
+  visibility: collapse;
+}
+
 .static{
   position: static;
 }
@@ -584,20 +592,20 @@ video {
   top: 0px;
 }
 
-.z-20{
-  z-index: 20;
-}
-
-.z-10{
-  z-index: 10;
-}
-
 .-z-10{
   z-index: -10;
 }
 
 .z-0{
   z-index: 0;
+}
+
+.z-10{
+  z-index: 10;
+}
+
+.z-20{
+  z-index: 20;
 }
 
 .my-auto{
@@ -609,12 +617,32 @@ video {
   margin-right: 1.5rem;
 }
 
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
 .block{
   display: block;
 }
 
+.inline{
+  display: inline;
+}
+
 .flex{
   display: flex;
+}
+
+.table{
+  display: table;
+}
+
+.grid{
+  display: grid;
+}
+
+.contents{
+  display: contents;
 }
 
 .hidden{
@@ -623,6 +651,10 @@ video {
 
 .aspect-square{
   aspect-ratio: 1 / 1;
+}
+
+.h-52{
+  height: 13rem;
 }
 
 .h-\[88px\]{
@@ -637,8 +669,12 @@ video {
   height: 100vh;
 }
 
-.h-52{
-  height: 13rem;
+.w-0{
+  width: 0px;
+}
+
+.w-20{
+  width: 5rem;
 }
 
 .w-5{
@@ -657,29 +693,63 @@ video {
   width: 100%;
 }
 
-.w-20{
-  width: 5rem;
-}
-
-.w-0{
-  width: 0px;
-}
-
 .flex-1{
   flex: 1 1 0%;
+}
+
+.flex-grow{
+  flex-grow: 1;
 }
 
 .grow{
   flex-grow: 1;
 }
 
+.border-collapse{
+  border-collapse: collapse;
+}
+
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.resize{
+  resize: both;
 }
 
 .columns-1{
   -moz-columns: 1;
        columns: 1;
+}
+
+.columns-2{
+  -moz-columns: 2;
+       columns: 2;
+}
+
+.columns-3{
+  -moz-columns: 3;
+       columns: 3;
+}
+
+.grid-flow-col{
+  grid-auto-flow: column;
+}
+
+.grid-flow-col-dense{
+  grid-auto-flow: column dense;
+}
+
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .flex-row{
@@ -724,18 +794,22 @@ video {
   overscroll-behavior: none;
 }
 
+.border{
+  border-width: 1px;
+}
+
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
+.bg-transparent{
+  background-color: transparent;
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-transparent{
-  background-color: transparent;
 }
 
 .p-3{
@@ -756,20 +830,30 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.pb-5{
-  padding-bottom: 1.25rem;
-}
-
 .pb-0{
   padding-bottom: 0px;
 }
 
-.pb-2\.5{
-  padding-bottom: 0.625rem;
+.pb-2{
+  padding-bottom: 0.5rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
 }
 
 .align-baseline{
   vertical-align: baseline;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-lg{
@@ -790,16 +874,24 @@ video {
   font-weight: 400;
 }
 
-.shadow-md{
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.underline{
+  text-decoration-line: underline;
 }
 
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline{
+  outline-style: solid;
 }
 
 .transition-all{
@@ -830,26 +922,16 @@ main {
   overflow:hidden;
 }
 
-@media (min-width: 405px){
-  .min-\[405px\]\:flex{
-    display: flex;
+@media (min-width: 500px){
+  .min-\[500px\]\:block{
+    display: block;
   }
-}
 
-@media (min-width: 415px){
-  .min-\[415px\]\:flex{
-    display: flex;
+  .min-\[500px\]\:inline{
+    display: inline;
   }
-}
 
-@media (min-width: 420px){
-  .min-\[420px\]\:flex{
-    display: flex;
-  }
-}
-
-@media (min-width: 460px){
-  .min-\[460px\]\:flex{
+  .min-\[500px\]\:flex{
     display: flex;
   }
 }
@@ -858,6 +940,14 @@ main {
   .sm\:columns-2{
     -moz-columns: 2;
          columns: 2;
+  }
+
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:pb-5{
+    padding-bottom: 1.25rem;
   }
 }
 
@@ -883,8 +973,16 @@ main {
          columns: 3;
   }
 
-  .lg\:pb-2\.5{
-    padding-bottom: 0.625rem;
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
+  }
+
+  .lg\:pb-0{
+    padding-bottom: 0px;
   }
 
   .lg\:text-2xl{
